# vampires-coronagraph

./: .gitignore  CondaPkg.toml  Manifest.toml  Project.toml  README.md  pyproject.toml
drawings/: 2020_SCExAO_pupil.dwg  focal_plane_mask.dwg  lyot_stop.dwg  lyot_stop_mirrored.dwg
notebooks/: fpm_size.jl  skin-depth-refractive.jl  skin-depth.jl
paper/: article.tex  report.bib  report.tex
scripts/: astrogrid.jl  astrogrid.py  astrogrid_figure.py  bench_curves.jl  lab_curves.jl  saturated_bench_curves.jl  sim_curves.jl  sky_curves.jl  throughput.jl  transmission.jl
src/: SCExAO_bench.py  aperture_psf.py  compare.py  config.py  lab_curves.py  lucky_imaging.py  lyot.py  paths.py  plotting.py  simulate.py  throughput.py
