[tool.poetry]
name = "vampires-coronagraph"
version = "0.1.0"
description = ""
authors = ["Miles Lucas <mdlucas@hawaii.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"
astropy = "^4.3.post1"
hcipy = "^0.4.0"
matplotlib = "^3.4.2"
proplot = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
